//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table admins {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  dni String [not null]
  phone String [not null]
  address String [not null]
  avatar String [not null]
  isBanned Boolean [not null, default: false]
  banReason String
  isActive Boolean [not null, default: false]
  birthDate DateTime [not null]
  password String [not null]
  refreshToken String
  resetPasswordToken String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table customers {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  dni String [not null]
  phone String [not null]
  address String [not null]
  avatar String [not null]
  isBanned Boolean [not null, default: false]
  banReason String
  isActive Boolean [not null, default: false]
  birthDate DateTime [not null]
  password String [not null]
  refreshToken String
  resetPasswordToken String
  stores stores [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table dealers {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  dni String [not null]
  phone String [not null]
  address String [not null]
  avatar String [not null]
  isBanned Boolean [not null, default: false]
  banReason String
  isActive Boolean [not null, default: false]
  birthDate DateTime [not null]
  password String [not null]
  refreshToken String
  resetPasswordToken String
  vehicle Vehicle [not null, default: 'NONE']
  available Boolean [not null, default: false]
  orders orders [not null]
  rankings dealers_rankings [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table dealers_rankings {
  id String [pk]
  comment String
  value Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  dealer dealers [not null]
  dealerId String [not null]
  user users [not null]
  userId String [not null]
}

Table users {
  id String [pk]
  name String [not null]
  email String
  phone String
  dni String
  avatar String [not null]
  refreshToken String
  facebookId String [unique, not null]
  facebookAccessToken String [not null]
  isBanned Boolean [not null, default: false]
  banReason String
  addresses users_addresses [not null]
  favorites users_favorites [not null]
  cart users_cart [not null]
  storeRankings stores_rankings [not null]
  dealerRankings dealers_rankings [not null]
  orders orders [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ProductRanking products_rankings [not null]
}

Table users_addresses {
  id String [pk]
  name String [not null]
  street String [not null]
  instructions String [not null]
  zip String [not null]
  city String [not null]
  tag UserAddressTag [not null]
  latitude Float [not null]
  longitude Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order orders [not null]
  user users
  userId String
}

Table users_cart {
  id String [pk]
  quantity Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product products [not null]
  productId String [not null]
  user users
  userId String
}

Table users_favorites {
  id String [pk]
  product products [not null]
  productId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users
  userId String
}

Table completed_orders {
  id String [pk]
  order orders [not null]
  orderId String [not null]
}

Table orders {
  id String [pk]
  products products [not null]
  dealer dealers
  dealerId String
  user users [not null]
  userId String [not null]
  quantity Int [not null, default: 1]
  deliveryPrice Float [not null, default: 0]
  status OrderStatus [not null, default: 'PENDING']
  message String
  arrivalTime DateTime
  address users_addresses [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userAddressId String [not null]
  completedOrders completed_orders [not null]
}

Table stores {
  id String [pk]
  name String [not null]
  description String [not null]
  address String [not null]
  logo String [not null]
  category StoreCategory [not null]
  categoryDescription String
  rankings stores_rankings [not null]
  products products [not null]
  openTime DateTime
  closeTime DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  owner customers [not null]
  ownerId String [not null]
}

Table stores_rankings {
  id String [pk]
  comment String
  value Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  userId String [not null]
  store stores [not null]
  storeId String [not null]
}

Table products {
  id String [pk]
  name String [not null]
  description String
  price Float [not null, default: 0]
  image String [not null]
  blurHash String [not null]
  coupon coupons
  couponId String
  orders orders [not null]
  userCart users_cart [not null]
  userFavorites users_favorites [not null]
  rankings products_rankings [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  store stores [not null]
  storeId String [not null]
}

Table products_rankings {
  id String [pk]
  comment String
  value Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  userId String [not null]
  product products
  productId String
}

Table coupons {
  id String [pk]
  code String [unique, not null]
  description String
  discount Float [not null, default: 0]
  expiration DateTime
  products products [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table OrderToProduct {
  productsId String [ref: > products.id]
  ordersId String [ref: > orders.id]
}

Enum Vehicle {
  CARRO
  MOTO
  BICICLETA
  PIE
  NONE
}

Enum UserAddressTag {
  CASA
  AMIGO
  PAREJA
  TRABAJO
  UNIVERSIDAD
  OTRO
}

Enum OrderStatus {
  CANCELLED
  PROBLEM
  PENDING
  SENT
  DELIVERED
}

Enum StoreCategory {
  LICORERIA
  RESTAURANTE
  MASCOTAS
  MODA
  TECNOLOGIA
  JUGUETERIA
  FARMACIA
  CUIDADO_PERSONAL
  MAQUILLAJE
  FLORISTERIA
  TIENDA
  SUPERMERCADOS
  LIBRERIA
  JUGUERIA
  OTRO
}

Ref: dealers_rankings.dealerId > dealers.id

Ref: dealers_rankings.userId > users.id

Ref: users_addresses.userId > users.id

Ref: users_cart.productId > products.id

Ref: users_cart.userId > users.id

Ref: users_favorites.productId > products.id

Ref: users_favorites.userId > users.id

Ref: completed_orders.orderId > orders.id

Ref: orders.dealerId > dealers.id

Ref: orders.userId > users.id

Ref: orders.userAddressId > users_addresses.id

Ref: stores.ownerId > customers.id

Ref: stores_rankings.userId > users.id

Ref: stores_rankings.storeId > stores.id

Ref: products.couponId > coupons.id

Ref: products.storeId > stores.id

Ref: products_rankings.userId > users.id

Ref: products_rankings.productId > products.id